[gd_scene load_steps=5 format=3 uid="uid://dt7deqvo8mdnm"]

[ext_resource type="Theme" uid="uid://do1k6l8gwck57" path="res://visuals/themes/default_theme.tres" id="1_753fo"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_mmmae"]
[ext_resource type="PackedScene" uid="uid://bvci2jpmh1crq" path="res://scenes/world.tscn" id="2_56tt1"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="4_8ogin"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("play_button", "focus_settings_button")]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_753fo")
script = ExtResource("1_mmmae")
world_scene = ExtResource("2_56tt1")
play_button = NodePath("MenuButtons/PlayButton")
focus_settings_button = NodePath("SettingsMenu/MarginContainer/Settings/FullscreenCheckBox")

[node name="MenuButtons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -50.5
offset_right = 33.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Jogar"

[node name="SettingsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Opções"

[node name="QuitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Sair
"

[node name="SettingsMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="BackButton" type="Button" parent="SettingsMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Voltar
"

[node name="Settings" type="VBoxContainer" parent="SettingsMenu/MarginContainer" node_paths=PackedStringArray("fullscreen_checkbox")]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("4_8ogin")
fullscreen_checkbox = NodePath("FullscreenCheckBox")

[node name="FullscreenCheckBox" type="CheckBox" parent="SettingsMenu/MarginContainer/Settings"]
layout_mode = 2
text = "Fullscreen"

[node name="VolumeLabel" type="Label" parent="SettingsMenu/MarginContainer/Settings"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="SettingsMenu/MarginContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 3
step = 10.0

[connection signal="pressed" from="MenuButtons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuButtons/SettingsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SettingsMenu/MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
